project(fast_ber_tests)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/autogen)

function(fast_ber_generate2 input_file1 input_file2 output_name)
    add_custom_command(
        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/autogen/${output_name}.hpp
        COMMAND fast_ber_compiler ${input_file1} ${input_file2} ${CMAKE_CURRENT_BINARY_DIR}/autogen/${output_name}
        DEPENDS fast_ber_compiler ${input_file1} ${input_file2}
    )
endfunction(fast_ber_generate2)

fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/simple5.asn simple)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/choice.asn choice)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/tags.asn tags)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/enumeration.asn enum)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/object_identifier.asn object_identifier)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/top_level_encodings.asn top_level_encodings)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/all_types_test.asn all_types)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/import.asn import)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/value_assignment.asn value_assign)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/embedded.asn embedded)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/parameterized_types.asn parameterized_types)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/sequence_of.asn sequence_of)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/time.asn time)
fast_ber_generate(${CMAKE_SOURCE_DIR}/testfiles/SGSN-CDR-def-v2009A.asn real_schema)
fast_ber_generate2(${CMAKE_SOURCE_DIR}/testfiles/multi_file_import_1.asn
                   ${CMAKE_SOURCE_DIR}/testfiles/multi_file_import_2.asn multi_file_import)

aux_source_directory(ber_types TEST_SRC)
aux_source_directory(util TEST_SRC)
aux_source_directory(compiler TEST_SRC)

add_executable(fast_ber_tests Test ${TEST_SRC} autogen/choice.hpp
                                               autogen/simple.hpp
                                               autogen/tags.hpp
                                               autogen/top_level_encodings.hpp
                                               autogen/enum.hpp
                                               autogen/real_schema.hpp
                                               autogen/all_types.hpp
                                               autogen/import.hpp
                                               autogen/multi_file_import.hpp
                                               autogen/object_identifier.hpp
                                               autogen/value_assign.hpp
                                               autogen/embedded.hpp
                                               autogen/parameterized_types.hpp
                                               autogen/sequence_of.hpp
                                               autogen/time.hpp)
target_include_directories(fast_ber_tests PRIVATE SYSTEM ${CMAKE_SOURCE_DIR}/3rd_party/Catch2/single_include)
target_include_directories(fast_ber_tests PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries (fast_ber_tests fast_ber_lib)

# Generate a header file from an asn1 input spec
# Create a library including the header
# Compile when running tests, check that the include file can be succesfully compiled
function(generate_and_compile test_case should_succeed)
    fast_ber_generate(${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/${test_case}.asn1 ${test_case})
    add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/autogen/${test_case}.cpp
        COMMAND echo \\\#include \\\"${test_case}.hpp\\\" > ${CMAKE_CURRENT_BINARY_DIR}/autogen/${test_case}.cpp)

    add_library(${test_case} ${CMAKE_CURRENT_BINARY_DIR}/autogen/${test_case}.cpp autogen/${test_case}.hpp)
    target_link_libraries(${test_case} fast_ber_lib)
    set_target_properties(${test_case} PROPERTIES EXCLUDE_FROM_ALL TRUE
                                       EXCLUDE_FROM_DEFAULT_BUILD TRUE)

    add_test(NAME fast_ber_parse_${test_case}
             COMMAND ${CMAKE_COMMAND} --build . --target ${test_case} --config $<CONFIGURATION>
             WORKING_DIRECTORY ${CMAKE_BINARY_DIR})

    if(NOT ${should_succeed})
        set_tests_properties(fast_ber_parse_${test_case} PROPERTIES WILL_FAIL TRUE)
    endif()

endfunction(generate_and_compile)

generate_and_compile(00-empty-OK TRUE)
generate_and_compile(01-empty-OK TRUE)
generate_and_compile(02-garbage-NP FALSE)
generate_and_compile(03-enum-OK TRUE)
generate_and_compile(04-enum-SE FALSE)
generate_and_compile(05-enum-SE FALSE)
generate_and_compile(06-enum-SE FALSE)
generate_and_compile(07-int-OK TRUE)
#generate_and_compile(08-int-SE FALSE)
#generate_and_compile(09-int-SE FALSE)
#add_test(NAME fast_ber_parse_asn_10 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/10-int-OK.asn1 parse_test_10)
#add_test(NAME fast_ber_parse_asn_11 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/11-int-SE.asn1 parse_test_11)
#add_test(NAME fast_ber_parse_asn_12 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/12-int-SE.asn1 parse_test_12)
#add_test(NAME fast_ber_parse_asn_13 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/13-resolver-OK.asn1 parse_test_13)
#add_test(NAME fast_ber_parse_asn_14 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/14-resolver-OK.asn1 parse_test_14)
#add_test(NAME fast_ber_parse_asn_15 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/15-resolver-SE.asn1 parse_test_15)
add_test(NAME fast_ber_parse_asn_16 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/16-constraint-OK.asn1 parse_test_16)
add_test(NAME fast_ber_parse_asn_17 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/17-tags-OK.asn1 parse_test_17)
add_test(NAME fast_ber_parse_asn_18 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/18-class-OK.asn1 parse_test_18)
#add_test(NAME fast_ber_parse_asn_19 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/19-param-OK.asn1 parse_test_19)
generate_and_compile(20-constr-OK TRUE)
generate_and_compile(21-tags-OK TRUE)
generate_and_compile(22-tags-OK TRUE)
generate_and_compile(23-bits-OK TRUE)
generate_and_compile(24-sequence-OK TRUE)
generate_and_compile(25-misc-OK TRUE)
generate_and_compile(26-sequence-SE TRUE)
generate_and_compile(27-set-SE TRUE)
generate_and_compile(28-tags-SE TRUE)
generate_and_compile(29-tags-OK TRUE)
generate_and_compile(30-set-OK TRUE)
generate_and_compile(31-set-of-OK TRUE)
generate_and_compile(32-sequence-of-OK TRUE)
generate_and_compile(33-misc-OK TRUE)
#generate_and_compile(34-class-OK TRUE)
#generate_and_compile(35-set-choice-OK TRUE)
#generate_and_compile(36-indirect-choice-SE TRUE)
generate_and_compile(37-indirect-choice-OK TRUE)
#generate_and_compile(38-comments-OK TRUE)
generate_and_compile(39-sequence-of-OK TRUE)
add_test(NAME fast_ber_parse_asn_40 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/40-int-optional-SE.asn1 parse_test_40)
add_test(NAME fast_ber_parse_asn_41 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/41-int-optional-OK.asn1 parse_test_41)
add_test(NAME fast_ber_parse_asn_42 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/42-real-life-OK.asn1 parse_test_42)
#add_test(NAME fast_ber_parse_asn_43 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/43-recursion-OK.asn1 parse_test_43)
add_test(NAME fast_ber_parse_asn_44 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/44-choice-in-sequence-OK.asn1 parse_test_44)
#add_test(NAME fast_ber_parse_asn_45 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/45-undefined-type-SE.asn1 parse_test_45)
add_test(NAME fast_ber_parse_asn_46 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/46-redefine-OK.asn1 parse_test_46)
add_test(NAME fast_ber_parse_asn_47 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/47-set-ext-OK.asn1 parse_test_47)
add_test(NAME fast_ber_parse_asn_48 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/48-real-life-OK.asn1 parse_test_48)
#add_test(NAME fast_ber_parse_asn_49 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/49-real-life-OK.asn1 parse_test_49)
generate_and_compile(50-constraint-OK TRUE)
generate_and_compile(51-constraint-SE TRUE)
generate_and_compile(52-constraint-SE TRUE)
generate_and_compile(53-constraint-SE TRUE)
generate_and_compile(54-constraint-SE TRUE)
generate_and_compile(55-components-of-OK TRUE)
generate_and_compile(56-components-of-SE FALSE)
#generate_and_compile(57-components-of-OK TRUE)
generate_and_compile(58-param-OK TRUE)
#add_test(NAME fast_ber_parse_asn_59 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/59-choice-extended-OK.asn1 parse_test_59)
generate_and_compile(60-any-OK TRUE)
generate_and_compile(61-any-1-SE TRUE)
generate_and_compile(62-any-OK TRUE)
generate_and_compile(63-any-2-SE TRUE)
generate_and_compile(64-oid-constr-OK TRUE)
generate_and_compile(65-multi-tag-OK TRUE)
generate_and_compile(66-ref-simple-OK TRUE)
generate_and_compile(67-embedded-choice-OK TRUE)
generate_and_compile(68-enum-default-OK TRUE)
generate_and_compile(69-reserved-words-OK TRUE)
#add_test(NAME fast_ber_parse_asn_70 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/70-xer-test-OK.asn1 parse_test_70)
add_test(NAME fast_ber_parse_asn_71 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/71-duplicate-types-SE.asn1 parse_test_71)
#add_test(NAME fast_ber_parse_asn_72 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/72-same-names-OK.asn1 parse_test_72)
#add_test(NAME fast_ber_parse_asn_73 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/73-circular-OK.asn1 parse_test_73)
add_test(NAME fast_ber_parse_asn_74 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/74-int-enum-constraints-OK.asn1 parse_test_74)
#add_test(NAME fast_ber_parse_asn_75 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/75-duplicate-modules-SE.asn1 parse_test_75)
#add_test(NAME fast_ber_parse_asn_76 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/76-duplicate-modules-SW.asn1 parse_test_76)
add_test(NAME fast_ber_parse_asn_77 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/77-str-default-OK.asn1 parse_test_77)
add_test(NAME fast_ber_parse_asn_78 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/78-str-default-SE.asn1 parse_test_78)
add_test(NAME fast_ber_parse_asn_79 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/79-constrained-by-OK.asn1 parse_test_79)
#add_test(NAME fast_ber_parse_asn_80 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/80-chardefs-OK.asn1 parse_test_80)
#add_test(NAME fast_ber_parse_asn_81 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/81-type-default-OK.asn1 parse_test_81)
add_test(NAME fast_ber_parse_asn_82 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/82-with-comps-OK.asn1 parse_test_82)
add_test(NAME fast_ber_parse_asn_83 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/83-with-comps-OK.asn1 parse_test_83)
add_test(NAME fast_ber_parse_asn_84 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/84-param-tags-OK.asn1 parse_test_84)
#add_test(NAME fast_ber_parse_asn_85 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/85-comments-OK.asn1 parse_test_85)
add_test(NAME fast_ber_parse_asn_86 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/86-atags-OK.asn1 parse_test_86)
#add_test(NAME fast_ber_parse_asn_87 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/87-old-syntax-OK.asn1 parse_test_87)
add_test(NAME fast_ber_parse_asn_88 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/88-integer-enum-OK.asn1 parse_test_88)
add_test(NAME fast_ber_parse_asn_89 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/89-bit-string-enum-OK.asn1 parse_test_89)
#add_test(NAME fast_ber_parse_asn_90 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/90-cond-int-type-OK.asn1 parse_test_90)
add_test(NAME fast_ber_parse_asn_91 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/91-cond-int-blessSize-OK.asn1 parse_test_91)
#add_test(NAME fast_ber_parse_asn_92 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/92-circular-loops-OK.asn1 parse_test_92)
add_test(NAME fast_ber_parse_asn_93 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/93-asn1c-controls-OK.asn1 parse_test_93)
add_test(NAME fast_ber_parse_asn_94 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/94-set-optionals-OK.asn1 parse_test_94)
add_test(NAME fast_ber_parse_asn_95 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/95-choice-per-order-OK.asn1 parse_test_95)
#add_test(NAME fast_ber_parse_asn_96 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/96-type-identifier-OK.asn1 parse_test_96)
#add_test(NAME fast_ber_parse_asn_97 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/97-type-identifier-SW.asn1 parse_test_97)
#add_test(NAME fast_ber_parse_asn_98 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/98-attribute-class-OK.asn1 parse_test_98)
#add_test(NAME fast_ber_parse_asn_99 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/99-class-sample-OK.asn1 parse_test_99)
#add_test(NAME fast_ber_parse_asn_100 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/100-class-ref-OK.asn1 parse_test_100)
#add_test(NAME fast_ber_parse_asn_101 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/101-class-ref-SE.asn1 parse_test_101)
#add_test(NAME fast_ber_parse_asn_102 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/102-class-ref-SE.asn1 parse_test_102)
#add_test(NAME fast_ber_parse_asn_103 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/103-reference-SE.asn1 parse_test_103)
add_test(NAME fast_ber_parse_asn_104 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/104-param-1-OK.asn1 parse_test_104)
add_test(NAME fast_ber_parse_asn_105 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/105-param-2-OK.asn1 parse_test_105)
add_test(NAME fast_ber_parse_asn_106 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/106-param-constr-OK.asn1 parse_test_106)
add_test(NAME fast_ber_parse_asn_107 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/107-param-constr-2-OK.asn1 parse_test_107)
add_test(NAME fast_ber_parse_asn_108 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/108-param-constr-3-OK.asn1 parse_test_108)
#add_test(NAME fast_ber_parse_asn_109 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/109-bit-string-SE.asn1 parse_test_109)
add_test(NAME fast_ber_parse_asn_110 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/110-param-3-OK.asn1 parse_test_110)
add_test(NAME fast_ber_parse_asn_111 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/111-param-4-SE.asn1 parse_test_111)
add_test(NAME fast_ber_parse_asn_112 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/112-param-class-OK.asn1 parse_test_112)
add_test(NAME fast_ber_parse_asn_113 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/113-bit-string-SE.asn1 parse_test_113)
#add_test(NAME fast_ber_parse_asn_114 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/114-bit-string-SE.asn1 parse_test_114)
add_test(NAME fast_ber_parse_asn_115 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/115-bit-string-OK.asn1 parse_test_115)
add_test(NAME fast_ber_parse_asn_116 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/116-bit-string-SE.asn1 parse_test_116)
add_test(NAME fast_ber_parse_asn_117 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/117-real-constraint-OK.asn1 parse_test_117)
add_test(NAME fast_ber_parse_asn_118 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/118-per-constraint-OK.asn1 parse_test_118)
#add_test(NAME fast_ber_parse_asn_119 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/119-per-strings-OK.asn1 parse_test_119)
add_test(NAME fast_ber_parse_asn_121 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/121-empty-imports-OK.asn1 parse_test_121)
add_test(NAME fast_ber_parse_asn_122 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/122-pattern-OK.asn1 parse_test_122)
add_test(NAME fast_ber_parse_asn_123 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/123-valueassignment-OK.asn1 parse_test_123)
add_test(NAME fast_ber_parse_asn_124 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/124-multiconstraint-OK.asn1 parse_test_124)
add_test(NAME fast_ber_parse_asn_125 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/125-bitstring-constraint-OK.asn1 parse_test_125)
add_test(NAME fast_ber_parse_asn_126 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/126-per-extensions-OK.asn1 parse_test_126)
add_test(NAME fast_ber_parse_asn_127 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/127-per-long-OK.asn1 parse_test_127)
add_test(NAME fast_ber_parse_asn_128 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/128-enum-SE.asn1 parse_test_128)
add_test(NAME fast_ber_parse_asn_129 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/129-enum-OK.asn1 parse_test_129)
add_test(NAME fast_ber_parse_asn_130 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/130-enum-OK.asn1 parse_test_130)
add_test(NAME fast_ber_parse_asn_131 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/131-per-empty-OK.asn1 parse_test_131)
add_test(NAME fast_ber_parse_asn_132 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/132-per-choice-OK.asn1 parse_test_132)
add_test(NAME fast_ber_parse_asn_133 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/133-per-constraints-OK.asn1 parse_test_133)
add_test(NAME fast_ber_parse_asn_134 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/3rd_party/asn1c/tests/134-per-long-OK.asn1 parse_test_134)

add_test(NAME fast_ber_compiler_0 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/simple0.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/simple0)
add_test(NAME fast_ber_compiler_1 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/simple1.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/simple1)
add_test(NAME fast_ber_compiler_2 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/simple2.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/simple2)
add_test(NAME fast_ber_compiler_3 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/simple3.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/simple3)
add_test(NAME fast_ber_compiler_4 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/simple4.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/simple4)
add_test(NAME fast_ber_compiler_5 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/simple5.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/simple5)
add_test(NAME fast_ber_compiler_6 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/sequence_of.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/sequence_of)
add_test(NAME fast_ber_compiler_7 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/extension.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/extension)
add_test(NAME fast_ber_compiler_8 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/SGSN-CDR-def-v2009A.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/real_schema)
add_test(NAME fast_ber_compiler_9 COMMAND fast_ber_compiler ${CMAKE_SOURCE_DIR}/testfiles/class.asn ${CMAKE_CURRENT_BINARY_DIR}/autogen/class)
add_test(NAME fast_ber_tests COMMAND fast_ber_tests)
